services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    io.kompose.service: frontend
spec:
  selector:
    io.kompose.service: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP # This can be LoadBalancer
