services/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: default
  labels:
    io.kompose.service: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.org/client-max-body-size: 16m
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
